// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ccd > renders ccd with charger included 1`] = `
<DocumentFragment>
  <div
    aria-label="Charger included. 1000 - 2000 Watts."
    class="ccd"
    role="figure"
  >
    <svg
      aria-hidden="true"
      class="ccd__charger-icon icon icon--ccd-charger-included"
    >
      <symbol
        id="icon-ccd-charger-included"
        viewBox="0 0 58 78"
      >
        <path
          clip-rule="evenodd"
          d="M0 0h58v78H0V0Zm1 1v76h56V1H1Zm7 28.75c0-.966.784-1.75 1.75-1.75H15V18h5V8h4v10h10V8h4v10h5v10h5.25c.967 0 1.75.784 1.75 1.75v38.5A1.75 1.75 0 0 1 48.25 70H9.75A1.75 1.75 0 0 1 8 68.25v-38.5ZM23 18V9h-2v9h2Zm14 0h-2V9h2v9Zm5 10v-9H16v9h26ZM9.75 29a.75.75 0 0 0-.75.75v38.5c0 .414.336.75.75.75h38.5a.75.75 0 0 0 .75-.75v-38.5a.75.75 0 0 0-.75-.75H9.75Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-ccd-charger-included"
      />
    </svg>
    <div
      class="ccd__description-figure"
    >
      <svg
        aria-hidden="true"
        class="ccd__top-icon icon icon--ccd-top"
      >
        <symbol
          fill="none"
          id="icon-ccd-top"
          viewBox="0 0 35 25"
        >
          <path
            d="M0.5 25V13.5H34.5V25"
            stroke-width="1"
          />
          <path
            d="M6.5 13V0.5H10.5V13"
            stroke-width="1"
          />
          <path
            d="M24.5 13V0.5H28.5V13"
            stroke-width="1"
          />
        </symbol>
        <use
          href="#icon-ccd-top"
        />
      </svg>
      <div
        class="ccd__body"
      >
        <div>
          1000 - 2000
        </div>
        <div>
          W
        </div>
      </div>
    </div>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,1,{htmlInput:{}},2,{htmlInput:{}},2,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",5,8,"src/tags/evo-ccd/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`ccd > renders ccd with charger included and usbpd 1`] = `
<DocumentFragment>
  <div
    aria-label="Charger included. 1000 - 2000 Watts. USB PD"
    class="ccd"
    role="figure"
  >
    <svg
      aria-hidden="true"
      class="ccd__charger-icon icon icon--ccd-charger-included"
    >
      <symbol
        id="icon-ccd-charger-included"
        viewBox="0 0 58 78"
      >
        <path
          clip-rule="evenodd"
          d="M0 0h58v78H0V0Zm1 1v76h56V1H1Zm7 28.75c0-.966.784-1.75 1.75-1.75H15V18h5V8h4v10h10V8h4v10h5v10h5.25c.967 0 1.75.784 1.75 1.75v38.5A1.75 1.75 0 0 1 48.25 70H9.75A1.75 1.75 0 0 1 8 68.25v-38.5ZM23 18V9h-2v9h2Zm14 0h-2V9h2v9Zm5 10v-9H16v9h26ZM9.75 29a.75.75 0 0 0-.75.75v38.5c0 .414.336.75.75.75h38.5a.75.75 0 0 0 .75-.75v-38.5a.75.75 0 0 0-.75-.75H9.75Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-ccd-charger-included"
      />
    </svg>
    <div
      class="ccd__description-figure"
    >
      <svg
        aria-hidden="true"
        class="ccd__top-icon icon icon--ccd-top"
      >
        <symbol
          fill="none"
          id="icon-ccd-top"
          viewBox="0 0 35 25"
        >
          <path
            d="M0.5 25V13.5H34.5V25"
            stroke-width="1"
          />
          <path
            d="M6.5 13V0.5H10.5V13"
            stroke-width="1"
          />
          <path
            d="M24.5 13V0.5H28.5V13"
            stroke-width="1"
          />
        </symbol>
        <use
          href="#icon-ccd-top"
        />
      </svg>
      <div
        class="ccd__body"
      >
        <div>
          1000 - 2000
        </div>
        <div>
          W
        </div>
        <div>
          USB PD
        </div>
      </div>
    </div>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,1,{htmlInput:{}},2,{htmlInput:{}},2,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",5,8,"src/tags/evo-ccd/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`ccd > renders ccd with charger not included 1`] = `
<DocumentFragment>
  <div
    aria-label="Charger not included. 1000 - 2000 Watts."
    class="ccd"
    role="figure"
  >
    <svg
      aria-hidden="true"
      class="ccd__charger-icon icon icon--ccd-charger-not-included"
    >
      <symbol
        id="icon-ccd-charger-not-included"
        viewBox="0 0 58 78"
      >
        <path
          clip-rule="evenodd"
          d="M.5 0H0v78h58V0H.5ZM1 2.686V77h54.758l-5.914-8.026A1.75 1.75 0 0 1 48.25 70H9.75A1.75 1.75 0 0 1 8 68.25v-38.5c0-.966.784-1.75 1.75-1.75H15v-6.314l-14-19Zm15 20.357V28h3.653L16 23.043ZM22.137 28 16 19.671V19h26v9H22.137Zm-1.748 1H9.75a.75.75 0 0 0-.75.75v38.5c0 .414.336.75.75.75h38.5a.75.75 0 0 0 .75-.75v-.421L20.39 29ZM49 64.457 22.874 29H48.25a.75.75 0 0 1 .75.75v34.707Zm1 1.357V29.75A1.75 1.75 0 0 0 48.25 28H43V18h-5V8h-4v10H24V8h-4v10h-5v.314L2.242 1H57v74.314l-7-9.5ZM37 9v9h-2V9h2Zm-16 9h2V9h-2v9Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-ccd-charger-not-included"
      />
    </svg>
    <div
      class="ccd__description-figure"
    >
      <svg
        aria-hidden="true"
        class="ccd__top-icon icon icon--ccd-top"
      >
        <symbol
          fill="none"
          id="icon-ccd-top"
          viewBox="0 0 35 25"
        >
          <path
            d="M0.5 25V13.5H34.5V25"
            stroke-width="1"
          />
          <path
            d="M6.5 13V0.5H10.5V13"
            stroke-width="1"
          />
          <path
            d="M24.5 13V0.5H28.5V13"
            stroke-width="1"
          />
        </symbol>
        <use
          href="#icon-ccd-top"
        />
      </svg>
      <div
        class="ccd__body"
      >
        <div>
          1000 - 2000
        </div>
        <div>
          W
        </div>
      </div>
    </div>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,1,{htmlInput:{}},2,{htmlInput:{}},2,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",5,8,"src/tags/evo-ccd/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`ccd > renders ccd with custom a11y 1`] = `
<DocumentFragment>
  <div
    aria-label="Charger included. 1000 - 2000 Watts. USB PD"
    class="ccd"
    role="figure"
  >
    <svg
      aria-hidden="true"
      class="ccd__charger-icon icon icon--ccd-charger-included"
    >
      <symbol
        id="icon-ccd-charger-included"
        viewBox="0 0 58 78"
      >
        <path
          clip-rule="evenodd"
          d="M0 0h58v78H0V0Zm1 1v76h56V1H1Zm7 28.75c0-.966.784-1.75 1.75-1.75H15V18h5V8h4v10h10V8h4v10h5v10h5.25c.967 0 1.75.784 1.75 1.75v38.5A1.75 1.75 0 0 1 48.25 70H9.75A1.75 1.75 0 0 1 8 68.25v-38.5ZM23 18V9h-2v9h2Zm14 0h-2V9h2v9Zm5 10v-9H16v9h26ZM9.75 29a.75.75 0 0 0-.75.75v38.5c0 .414.336.75.75.75h38.5a.75.75 0 0 0 .75-.75v-38.5a.75.75 0 0 0-.75-.75H9.75Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-ccd-charger-included"
      />
    </svg>
    <div
      class="ccd__description-figure"
    >
      <svg
        aria-hidden="true"
        class="ccd__top-icon icon icon--ccd-top"
      >
        <symbol
          fill="none"
          id="icon-ccd-top"
          viewBox="0 0 35 25"
        >
          <path
            d="M0.5 25V13.5H34.5V25"
            stroke-width="1"
          />
          <path
            d="M6.5 13V0.5H10.5V13"
            stroke-width="1"
          />
          <path
            d="M24.5 13V0.5H28.5V13"
            stroke-width="1"
          />
        </symbol>
        <use
          href="#icon-ccd-top"
        />
      </svg>
      <div
        class="ccd__body"
      >
        <div>
          1000 - 2000
        </div>
        <div>
          W
        </div>
        <div>
          USB PD
        </div>
      </div>
    </div>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,1,{htmlInput:{}},2,{htmlInput:{}},2,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",5,8,"src/tags/evo-ccd/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`ccd > renders ccd with usbpd included 1`] = `
<DocumentFragment>
  <div
    aria-label="1000 - 2000 Watts. USB PD"
    class="ccd"
    role="figure"
  >
    <div
      class="ccd__description-figure"
    >
      <svg
        aria-hidden="true"
        class="ccd__top-icon icon icon--ccd-top"
      >
        <symbol
          fill="none"
          id="icon-ccd-top"
          viewBox="0 0 35 25"
        >
          <path
            d="M0.5 25V13.5H34.5V25"
            stroke-width="1"
          />
          <path
            d="M6.5 13V0.5H10.5V13"
            stroke-width="1"
          />
          <path
            d="M24.5 13V0.5H28.5V13"
            stroke-width="1"
          />
        </symbol>
        <use
          href="#icon-ccd-top"
        />
      </svg>
      <div
        class="ccd__body"
      >
        <div>
          1000 - 2000
        </div>
        <div>
          W
        </div>
        <div>
          USB PD
        </div>
      </div>
    </div>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,1,{htmlInput:{}},2,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",5,"src/tags/evo-ccd/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`ccd > renders default ccd 1`] = `
<DocumentFragment>
  <div
    aria-label="1000 - 2000 Watts."
    class="ccd"
    role="figure"
  >
    <div
      class="ccd__description-figure"
    >
      <svg
        aria-hidden="true"
        class="ccd__top-icon icon icon--ccd-top"
      >
        <symbol
          fill="none"
          id="icon-ccd-top"
          viewBox="0 0 35 25"
        >
          <path
            d="M0.5 25V13.5H34.5V25"
            stroke-width="1"
          />
          <path
            d="M6.5 13V0.5H10.5V13"
            stroke-width="1"
          />
          <path
            d="M24.5 13V0.5H28.5V13"
            stroke-width="1"
          />
        </symbol>
        <use
          href="#icon-ccd-top"
        />
      </svg>
      <div
        class="ccd__body"
      >
        <div>
          1000 - 2000
        </div>
        <div>
          W
        </div>
      </div>
    </div>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,1,{htmlInput:{}},2,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",5,"src/tags/evo-ccd/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`ccd > renders with no min and max 1`] = `
<DocumentFragment>
  <div
    aria-label=""
    class="ccd"
    role="figure"
  />
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,1,{htmlInput:{}}]),"src/tags/evo-ccd/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`ccd > renders with no min and max but with charger included 1`] = `
<DocumentFragment>
  <div
    aria-label="Charger included."
    class="ccd"
    role="figure"
  >
    <svg
      aria-hidden="true"
      class="ccd__charger-icon icon icon--ccd-charger-included"
    >
      <symbol
        id="icon-ccd-charger-included"
        viewBox="0 0 58 78"
      >
        <path
          clip-rule="evenodd"
          d="M0 0h58v78H0V0Zm1 1v76h56V1H1Zm7 28.75c0-.966.784-1.75 1.75-1.75H15V18h5V8h4v10h10V8h4v10h5v10h5.25c.967 0 1.75.784 1.75 1.75v38.5A1.75 1.75 0 0 1 48.25 70H9.75A1.75 1.75 0 0 1 8 68.25v-38.5ZM23 18V9h-2v9h2Zm14 0h-2V9h2v9Zm5 10v-9H16v9h26ZM9.75 29a.75.75 0 0 0-.75.75v38.5c0 .414.336.75.75.75h38.5a.75.75 0 0 0 .75-.75v-38.5a.75.75 0 0 0-.75-.75H9.75Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-ccd-charger-included"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,1,{htmlInput:{}},2,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",5,"src/tags/evo-ccd/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;

exports[`ccd > renders with no min and max but with no charger included 1`] = `
<DocumentFragment>
  <div
    aria-label="Charger not included."
    class="ccd"
    role="figure"
  >
    <svg
      aria-hidden="true"
      class="ccd__charger-icon icon icon--ccd-charger-not-included"
    >
      <symbol
        id="icon-ccd-charger-not-included"
        viewBox="0 0 58 78"
      >
        <path
          clip-rule="evenodd"
          d="M.5 0H0v78h58V0H.5ZM1 2.686V77h54.758l-5.914-8.026A1.75 1.75 0 0 1 48.25 70H9.75A1.75 1.75 0 0 1 8 68.25v-38.5c0-.966.784-1.75 1.75-1.75H15v-6.314l-14-19Zm15 20.357V28h3.653L16 23.043ZM22.137 28 16 19.671V19h26v9H22.137Zm-1.748 1H9.75a.75.75 0 0 0-.75.75v38.5c0 .414.336.75.75.75h38.5a.75.75 0 0 0 .75-.75v-.421L20.39 29ZM49 64.457 22.874 29H48.25a.75.75 0 0 1 .75.75v34.707Zm1 1.357V29.75A1.75 1.75 0 0 0 48.25 28H43V18h-5V8h-4v10H24V8h-4v10h-5v.314L2.242 1H57v74.314l-7-9.5ZM37 9v9h-2V9h2Zm-16 9h2V9h-2v9Z"
          fill-rule="evenodd"
        />
      </symbol>
      <use
        href="#icon-ccd-charger-not-included"
      />
    </svg>
  </div>
  <script>
    ((runtimeId) =&gt; (
(self[runtimeId] = (
  renderId,
  prefix = runtimeId + renderId,
  prefixLen = prefix.length,
  lookup = {},
  visits = [],
  doc = document,
  walker = doc.createTreeWalker(
    doc,
    129 /* NodeFilter.SHOW_COMMENT | NodeFilter.SHOW_ELEMENT */,
  ),
) =&gt;
  doc = (self[runtimeId][renderId] = {
    i: prefix,
    d: doc,
    l: lookup,
    v: visits,
    x() {},
    w(node, op, id) {
      while ((node = walker.nextNode())) {
        doc.x(
          (op =
            (op = node.data) &&
            !op.indexOf(prefix) &&
            ((lookup[(id = op.slice(prefixLen + 1))] = node), op[prefixLen])),
          id,
          node,
        );

        if (op &gt; "#") {
          visits.push(node);
        }
      }
    },
  })),
self[runtimeId]
))("M")("_");M._.r=[_=&gt;(_.a=[0,1,{htmlInput:{}},2,{htmlInput:{}}]),"src/tags/evo-icon/index.marko_0_htmlInput",5,"src/tags/evo-ccd/index.marko_0_htmlInput",2];M._.w()
  </script>
</DocumentFragment>
`;
